Ensure text remains visible during webfont load

--- a/src/assets/style/base/scaffolding.scss
+++ b/src/assets/style/base/scaffolding.scss
@@ -8,7 +8,6 @@ body {
     background-color: $background;
     font: $font-style $font-variant $font-weight #{$font-size-mobile}/#{$line-height};
     font-family: 'Roboto', sans-serif;
-    font-display: swap;
 }
 
 section {
